Crash if weight track = 0 #38844

Closed
opened 2014-02-26 02:45:55 +01:00 by boris cohen · 14 comments

System Information
Win 7 64b
GTX 560Ti

Blender Version
Broken: today buildbot : hash d47d030

Short description of error

Blender Crash (Blender stop working)

Exact steps for others to reproduce the error

In moovie clip editor:

  • add a footage
  • add some marker (at least 8 for a 3D track)
  • track it
  • set one marker weight to 0
  • solve solution
  • Crash
**System Information** Win 7 64b GTX 560Ti **Blender Version** Broken: today buildbot : hash d47d030 **Short description of error** Blender Crash (Blender stop working) **Exact steps for others to reproduce the error** In moovie clip editor: - add a footage - add some marker (at least 8 for a 3D track) - track it - set one marker weight to 0 - solve solution - Crash
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @boby

Added subscriber: @boby

Added subscribers: @Sergey, @ThomasDinges

Added subscribers: @Sergey, @ThomasDinges
Sergey Sharybin self-assigned this 2014-02-26 07:42:51 +01:00

I couldn't reproduce the crash. I've got missing cameras (due to lack of information, which is expected actually) but no crash. Please attach .blend file which crashes for you (.blend is enough, no need in the footage).

I couldn't reproduce the crash. I've got missing cameras (due to lack of information, which is expected actually) but no crash. Please attach .blend file which crashes for you (.blend is enough, no need in the footage).
Author

Not sure how to provide the blend on the new website, but here it is :

http://www.pasteall.org/blend/27098

Thanks !

Not sure how to provide the blend on the new website, but here it is : http://www.pasteall.org/blend/27098 Thanks !

Few more Qs:

  • Which exact build you're using?
  • Am i right for you it's just matter of pressing "Solve Camera" to crash?
Few more Qs: - Which exact build you're using? - Am i right for you it's just matter of pressing "Solve Camera" to crash?
Author

Hi Sergey,

Build is the yesterday morning buildbot one, for Win 64b.
Splash info :
Date : 2014-02-25 01:48
Hash : d47d030

Yep you are right, "Solve camera Motion" or shortcut Shift+S make blender crash.

Not sure how you try it without the image sequence but i can provide it if necessary.

Thanks

Hi Sergey, Build is the yesterday morning buildbot one, for Win 64b. Splash info : Date : 2014-02-25 01:48 Hash : d47d030 Yep you are right, "Solve camera Motion" or shortcut Shift+S make blender crash. Not sure how you try it without the image sequence but i can provide it if necessary. Thanks

Are you using official build or experimental vc2013 or so?

Are you using official build or experimental vc2013 or so?
Author

Using official build here.

Just tested with the today' build (02/26) and still crash.

Hash : 70924a7

It seems that you can't reproduce it. Would you want me to test on Linux (mint 15 64b) ?

Using official build here. Just tested with the today' build (02/26) and still crash. Hash : 70924a7 It seems that you can't reproduce it. Would you want me to test on Linux (mint 15 64b) ?

@boby, nope, i was able to encounter the crash on windows by self. Looking nito it now (building on windows takes forever..).

Interesting why it doesn't happen on linux tho..

@boby, nope, i was able to encounter the crash on windows by self. Looking nito it now (building on windows takes forever..). Interesting why it doesn't happen on linux tho..

This issue was referenced by blender/blender-addons-contrib@00acb98436

This issue was referenced by blender/blender-addons-contrib@00acb984360439d5480bd84d5a212a5524984900

This issue was referenced by 00acb98436

This issue was referenced by 00acb984360439d5480bd84d5a212a5524984900

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 00acb98436.

Closed by commit 00acb98436.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38844
No description provided.